Bug fix: piece form doesn't render correctly on mobile

--- a/styles.css
+++ b/styles.css
@@ -197,10 +197,6 @@ textarea {
   white-space: pre-wrap; /* let the text wrap preserving spaces */
 }
 
-form > div {
-  display: grid;
-}
-
 #checkbox-container {
   display: flex;
 }
